# simple-led-control

./: CMakeLists.txt  README.md
include/: brightness_control.h  color_hex_parser.h  hex_to_rgb.h  mystrcat.h  read_color.h  update_color.h
src/: brightness_control.c  color_hex_parser.c  hex_to_rgb.c  main.c  mystrcat.c  read_color.c  update_color.c
